added services interfaces