@@ -17,7 +17,7 @@ import org.go.together.test.mapper.JoinTestMapper;
 import org.go.together.test.mapper.ManyJoinMapper;
 import org.go.together.test.repository.interfaces.JoinTestRepository;
 import org.go.together.test.repository.interfaces.ManyJoinRepository;
-import org.go.together.test.service.TestService;
+import org.go.together.test.service.interfaces.TestService;
 import org.go.together.tests.CrudServiceCommonTest;
 import org.go.together.validation.Validator;
 import org.junit.jupiter.api.AfterEach;
@@ -53,37 +53,27 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
     @Autowired
     private Validator<TestDto> validator;
 
+    Random random = new Random();
+
     @BeforeEach
     public void init() {
         super.init();
-        UUID id = UUID.randomUUID();
-        String name = "test name";
-        long number = 1;
-        Date date = new Date();
-        Calendar startCalendar = Calendar.getInstance();
-        startCalendar.setTime(date);
-        startCalendar.add(Calendar.MONTH, 1);
-        Date startDate = startCalendar.getTime();
-        Calendar endCalendar = Calendar.getInstance();
-        endCalendar.setTime(startDate);
-        endCalendar.add(Calendar.MONTH, 1);
-        Date endDate = endCalendar.getTime();
-        long startNumber = 1;
-        long endNumber = 3;
-        double latitude = 18.313230192867607;
-        double longitude = 74.39449363632201;
-        SimpleDto simpleDto = new SimpleDto("simpleDto", "simpleDto");
+        TestEntity testEntity = createTestEntity("test name");
+        for (int i = 0; i < 5; i++) {
+            createTestEntity("test " + 1);
+        }
+        this.testDto = mapper.entityToDto(testEntity);
+    }
 
-        TestDto testDto = createTestDto(id, name, number, date, startDate, endDate,
-                startNumber, endNumber, simpleDto, longitude, latitude);
+    private TestEntity createTestEntity(String name) {
+        TestDto testDto = getTestDto(name);
 
         testDto.getManyJoinEntities().stream().map(manyJoinMapper::dtoToEntity).forEach(manyJoinRepository::save);
         testDto.getJoinTestEntities().stream().map(joinTestMapper::dtoToEntity).forEach(joinTestRepository::save);
 
         IdDto idDto = crudService.create(testDto);
 
-        TestEntity testEntity = repository.findByIdOrThrow(idDto.getId());
-        this.testDto = mapper.entityToDto(testEntity);
+        return repository.findByIdOrThrow(idDto.getId());
     }
 
     @AfterEach
@@ -164,9 +154,9 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         Date endDate = endCalendar.getTime();
         testDto.setEndDate(endDate);
 
-        testDto.setNumber(2);
+        testDto.setNumber((long) random.nextInt(10) + 10);
         testDto.setLatitude(3333.3);
-        testDto.setEndNumber(4);
+        testDto.setEndNumber(random.nextInt(10) + 20);
         IdDto updatedId = crudService.update(testDto);
         Optional<TestEntity> updatedEntity = repository.findById(updatedId.getId());
 
@@ -204,8 +194,8 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         formDto.setMainIdField("test");
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(LIKE);
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("name", "test")));
-        formDto.setFilters(Collections.singletonMap("name", filterDto));
+        filterDto.setValues(Set.of(Map.of("name", "name")));
+        formDto.setFilters(Map.of("name", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -227,8 +217,8 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         formDto.setMainIdField("test.id");
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(LIKE);
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("name", "test")));
-        formDto.setFilters(Collections.singletonMap("name", filterDto));
+        filterDto.setValues(Set.of(Map.of("name", "name")));
+        formDto.setFilters(Map.of("name", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -255,8 +245,8 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         for (ManyJoinDto manyJoinDto : testDto.getManyJoinEntities()) {
             uuids.add(manyJoinDto.getId());
         }
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("id", uuids)));
-        formDto.setFilters(Collections.singletonMap("manyJoinEntities.id", filterDto));
+        filterDto.setValues(Set.of(Map.of("id", uuids)));
+        formDto.setFilters(Map.of("manyJoinEntities.id", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -286,8 +276,8 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
                     for (ManyJoinDto manyJoinDto : testDto.getManyJoinEntities()) {
                         uuids.add(manyJoinDto.getId());
                     }
-                    filterDto.setValues(Collections.singleton(Collections.singletonMap("someUndefinedField", uuids)));
-                    formDto.setFilters(Collections.singletonMap("someUndefinedField", filterDto));
+                    filterDto.setValues(Set.of(Map.of("someUndefinedField", uuids)));
+                    formDto.setFilters(Map.of("someUndefinedField", filterDto));
                     PageDto pageDto = new PageDto();
                     pageDto.setPage(0);
                     pageDto.setSize(3);
@@ -304,10 +294,10 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         formDto.setMainIdField("test");
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(IN);
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("id", Collections.singleton("filter"))));
+        filterDto.setValues(Set.of(Map.of("id", Set.of("filter"))));
         Collection<Object> uuids = new HashSet<>(testDto.getElements());
         ((TestService) crudService).setAnotherClient(uuids);
-        formDto.setFilters(Collections.singletonMap("elements?element.id", filterDto));
+        formDto.setFilters(Map.of("elements?element.id", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -330,13 +320,13 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         formDto.setMainIdField("test");
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(IN);
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("id", Collections.singleton("filter"))));
+        filterDto.setValues(Set.of(Map.of("id", Set.of("filter"))));
         Collection<Object> uuids = new HashSet<>();
         for (JoinTestDto joinTestDto : testDto.getJoinTestEntities()) {
             uuids.add(joinTestDto.getId());
         }
         ((TestService) crudService).setAnotherClient(uuids);
-        formDto.setFilters(Collections.singletonMap("joinTestEntities.id?join.id", filterDto));
+        formDto.setFilters(Map.of("joinTestEntities.id?join.id", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -359,9 +349,9 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         formDto.setMainIdField("test");
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(IN);
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("id", "filter")));
+        filterDto.setValues(Set.of(Map.of("id", "filter")));
         ((TestService) crudService).setAnotherClient(Collections.emptyList());
-        formDto.setFilters(Collections.singletonMap("joinTestEntities.id?join.id", filterDto));
+        formDto.setFilters(Map.of("joinTestEntities.id?join.id", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -383,8 +373,8 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         Map<String, Object> values = new HashMap<>();
         values.put("name", "test name");
         values.put("number", 1);
-        filterDto.setValues(Collections.singleton(values));
-        formDto.setFilters(Collections.singletonMap("[name|number]", filterDto));
+        filterDto.setValues(Set.of(values));
+        formDto.setFilters(Map.of("[name|number]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -409,9 +399,9 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         filterDto.setFilterType(EQUAL);
         Map<String, Object> values = new HashMap<>();
         values.put("name", "test name");
-        values.put("number", 1);
-        filterDto.setValues(Collections.singleton(values));
-        formDto.setFilters(Collections.singletonMap("[name&number]", filterDto));
+        values.put("number", testDto.getNumber());
+        filterDto.setValues(Set.of(values));
+        formDto.setFilters(Map.of("[name&number]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -436,12 +426,12 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         filterDto.setFilterType(EQUAL);
         Map<String, Object> values = new HashMap<>();
         values.put("name", "test name");
-        values.put("number", 1);
+        values.put("number", testDto.getNumber());
         Map<String, Object> values1 = new HashMap<>();
         values1.put("name", "test");
         values1.put("number", 2);
         filterDto.setValues(Set.of(values, values1));
-        formDto.setFilters(Collections.singletonMap("[name&number]", filterDto));
+        formDto.setFilters(Map.of("[name&number]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -469,13 +459,13 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         for (ManyJoinDto manyJoinDto : testDto.getManyJoinEntities()) {
             uuids.add(manyJoinDto.getId());
         }
-        values.put("name", Collections.singleton("test name"));
+        values.put("name", Set.of("test name"));
         values.put("manyJoinEntities.idw", uuids);
         Map<String, Object> values1 = new HashMap<>();
-        values1.put("name", Collections.singleton("test"));
+        values1.put("name", Set.of("test"));
         values1.put("manyJoinEntities.idw", Collections.emptyList());
         filterDto.setValues(Set.of(values, values1));
-        formDto.setFilters(Collections.singletonMap("[name&manyJoinEntities.idw]", filterDto));
+        formDto.setFilters(Map.of("[name&manyJoinEntities.idw]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -500,12 +490,12 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         filterDto.setFilterType(EQUAL);
         Map<String, Object> values = new HashMap<>();
         values.put("names", "test name");
-        values.put("numbers", 1);
+        values.put("numbers", testDto.getNumber());
         Map<String, Object> values1 = new HashMap<>();
         values1.put("names", "test");
         values1.put("numbers", 2);
         filterDto.setValues(Set.of(values, values1));
-        formDto.setFilters(Collections.singletonMap("[names&numbers]", filterDto));
+        formDto.setFilters(Map.of("[names&numbers]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -528,10 +518,10 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         formDto.setMainIdField("test");
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(IN);
-        filterDto.setValues(Collections.singleton(Collections.singletonMap("id", Collections.singleton("filter"))));
+        filterDto.setValues(Set.of(Map.of("id", Set.of("filter"))));
         Collection<Object> uuids = new HashSet<>(testDto.getElements());
         ((TestService) crudService).setAnotherClient(uuids);
-        formDto.setFilters(Collections.singletonMap("elementss?element.id", filterDto));
+        formDto.setFilters(Map.of("elementss?element.id", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -555,12 +545,12 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(IN);
         Map<String, Object> objectObjectHashMap = new HashMap<>();
-        objectObjectHashMap.put("id", Collections.singleton("filter"));
-        objectObjectHashMap.put("name", Collections.singleton("filtername"));
-        filterDto.setValues(Collections.singleton(objectObjectHashMap));
+        objectObjectHashMap.put("id", Set.of("filter"));
+        objectObjectHashMap.put("name", Set.of("filtername"));
+        filterDto.setValues(Set.of(objectObjectHashMap));
         Collection<Object> uuids = new HashSet<>(testDto.getElements());
         ((TestService) crudService).setAnotherClient(uuids);
-        formDto.setFilters(Collections.singletonMap("elements?element.[id|name]", filterDto));
+        formDto.setFilters(Map.of("elements?element.[id|name]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -589,9 +579,9 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         }
         Map<String, Object> map = new HashMap<>();
         map.put("idw", uuids);
-        map.put("namew", Collections.singleton("many join test 1"));
-        filterDto.setValues(Collections.singleton(map));
-        formDto.setFilters(Collections.singletonMap("manyJoinEntities.[idw&namew]", filterDto));
+        map.put("namew", Set.of("many join test 1"));
+        filterDto.setValues(Set.of(map));
+        formDto.setFilters(Map.of("manyJoinEntities.[idw&namew]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -620,9 +610,9 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         }
         Map<String, Object> map = new HashMap<>();
         map.put("idw", uuids);
-        map.put("namew", Collections.singleton("many join test 1"));
-        filterDto.setValues(Collections.singleton(map));
-        formDto.setFilters(Collections.singletonMap("manyJoinEntities.[idw&namew]", filterDto));
+        map.put("namew", Set.of("many join test 1"));
+        filterDto.setValues(Set.of(map));
+        formDto.setFilters(Map.of("manyJoinEntities.[idw&namew]", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -642,12 +632,12 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         FilterDto filterDto = new FilterDto();
         filterDto.setFilterType(IN);
         Map<String, Object> objectObjectHashMap = new HashMap<>();
-        objectObjectHashMap.put("id", Collections.singleton("filter"));
-        objectObjectHashMap.put("name", Collections.singleton("filtername"));
-        filterDto.setValues(Collections.singleton(objectObjectHashMap));
+        objectObjectHashMap.put("id", Set.of("filter"));
+        objectObjectHashMap.put("name", Set.of("filtername"));
+        filterDto.setValues(Set.of(objectObjectHashMap));
         Collection<Object> uuids = new HashSet<>(testDto.getElements());
         ((TestService) crudService).setAnotherClient(uuids);
-        formDto.setFilters(Collections.singletonMap("elements?element.[id|name]:2", filterDto));
+        formDto.setFilters(Map.of("elements?element.[id|name]:2", filterDto));
         PageDto pageDto = new PageDto();
         pageDto.setPage(0);
         pageDto.setSize(3);
@@ -687,5 +677,27 @@ class CrudServiceTest extends CrudServiceCommonTest<TestEntity, TestDto> {
         testDto.setSimpleDto(new SimpleDto(string, string));
 
         return testDto;
+    }
+
+    private TestDto getTestDto(String name) {
+        UUID id = UUID.randomUUID();
+        long number = (long) random.nextInt(10) + 10;
+        Date date = new Date();
+        Calendar startCalendar = Calendar.getInstance();
+        startCalendar.setTime(date);
+        startCalendar.add(Calendar.MONTH, 1);
+        Date startDate = startCalendar.getTime();
+        Calendar endCalendar = Calendar.getInstance();
+        endCalendar.setTime(startDate);
+        endCalendar.add(Calendar.MONTH, 1);
+        Date endDate = endCalendar.getTime();
+        long startNumber = random.nextInt(9);
+        long endNumber = random.nextInt(10) + 20;
+        double latitude = 100 * random.nextDouble();
+        double longitude = 100 * random.nextDouble();
+        SimpleDto simpleDto = new SimpleDto(UUID.randomUUID().toString(), UUID.randomUUID().toString());
+
+        return createTestDto(id, name, number, date, startDate, endDate,
+                startNumber, endNumber, simpleDto, longitude, latitude);
     }
 }
